fix copy & sn's spacing

--- a/styles/components/_copyright.scss
+++ b/styles/components/_copyright.scss
@@ -28,6 +28,7 @@ $class: "copyright";
     .#{$class}-box {
       padding: 0 16px 16px;
       .#{$class}-row {
+        padding: 4px 16px 16px;
       }
     }
   }
