--- a/styles/components/_sitemap.scss
+++ b/styles/components/_sitemap.scss
@@ -30,6 +30,7 @@ $class: "sitemap";
       .#{$class}-row {
       }
       .#{$class}-item {
+        padding: 16px 16px 4px;
       }
     }
   }
