--- a/styles/globals/_layouts.scss
+++ b/styles/globals/_layouts.scss
@@ -80,7 +80,7 @@
 // -------------------------------------------------------------
 @media #{$mobile} {
   .main {
-    min-height: calc(100vh - 308px);
+    min-height: calc(100vh - 284px);
     padding: 80px 0 40px;
   }
   .footer {
